syntax = "proto3";
package comments;
option go_package = "/";

message CreateReq {
  string org_slug = 1;
  string value = 2;
}

message CreateResp {
  int32 status = 1;
  string message = 2;
}

message GetAllReq {
  string org_slug = 1;
}

message GetAllResp {
  int32 status = 1;
  string message = 2;
  repeated string data = 3;
}

message DeleteReq {
  string org_slug = 1;
}

message DeleteResp {
  int32 status = 1;
  string message = 2;
}

service CommentService {
  rpc Create(CreateReq) returns (CreateResp);
  rpc GetAll(GetAllReq) returns (GetAllResp);
  rpc Delete(DeleteReq) returns (DeleteResp);
}